--- a/public/volume.html
+++ b/public/volume.html
@@ -8,9 +8,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Volume</title>
+    <link rel="shortcut icon" href="/img/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="/img/icon.svg">
     <style>
         body {
             background-color: rgb(19, 20, 23);
+            color: rgb(199, 201, 211);
             font-family: Lato, "Lucida Grande", "Lucida Sans Unicode", Tahoma, sans-serif;
             margin: 0;
             padding: 0;
@@ -40,6 +43,7 @@
             background-color: transparent;
             border: none;
             border-bottom: rgb(199, 201, 211) 1px solid;
+            border-radius: 0;
             color: rgb(199, 201, 211);
             display: block;
             font-size: 2.0rem;
@@ -112,7 +116,7 @@
 
 <body>
     <main>
-        <h1>Volume</h1>
+        <h1><a href="/"><img src="/img/icon.svg" alt=""></a>Volume</h1>
         <!-- <p>Want to upgrade your skills and get noticed? Participating in CodePen Challenges is a great way to try
             something new. We frequently feature these Pens on our homepage and across social media!</p> -->
         <label for="balance">balance (ten thousand yen)</label>
