--- a/public/volume.html
+++ b/public/volume.html
@@ -8,8 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Volume</title>
-    <link rel="shortcut icon" href="/img/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/img/icon.svg">
+    <link rel="shortcut icon" href="img/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/icon.svg">
     <style>
         body {
             background-color: rgb(19, 20, 23);
@@ -22,6 +22,7 @@
         main {
             background-color: rgb(44, 48, 58);
             border-radius: 16px;
+            box-sizing: border-box;
             left: 50%;
             padding: 16px;
             position: absolute;
@@ -116,7 +117,7 @@
 
 <body>
     <main>
-        <h1><a href="/"><img src="/img/icon.svg" alt=""></a>Volume</h1>
+        <h1><a href="./"><img src="img/icon.svg" alt=""></a>Volume</h1>
         <!-- <p>Want to upgrade your skills and get noticed? Participating in CodePen Challenges is a great way to try
             something new. We frequently feature these Pens on our homepage and across social media!</p> -->
         <label for="balance">balance (ten thousand yen)</label>
