--- a/public/volume.html
+++ b/public/volume.html
@@ -45,6 +45,7 @@
             border: none;
             border-bottom: rgb(199, 201, 211) 1px solid;
             border-radius: 0;
+            box-sizing: border-box;
             color: rgb(199, 201, 211);
             display: block;
             font-size: 2.0rem;
