apple-touch-icon.png

--- a/public/volume.html
+++ b/public/volume.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Volume</title>
     <link rel="shortcut icon" href="img/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="img/icon.svg">
+    <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
     <style>
         body {
             background-color: rgb(19, 20, 23);
