--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GUIDED STRAW</title>
     <link rel="shortcut icon" href="img/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="img/icon.svg">
+    <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
     <link rel="stylesheet" href="style.css">
 </head>
 
