--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
         <h1><a href="./"><img src="img/icon.svg" alt=""></a></h1>
         <ul>
             <li><a href="volume.html">Volume</a></li>
+            <li><a href="candlestick.html">Candlestick</a></li>
+            <li><a href="candlestick-multi-timeframe.html">Candlestick Multi timeframe</a></li>
         </ul>
     </main>
 </body>
