--- a/public/candlestick-multi-timeframe.html
+++ b/public/candlestick-multi-timeframe.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Candlestick Multi timeframe</title>
+    <link rel="shortcut icon" href="img/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
     <style>
         body {
             height: 100vh;
