--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,12 @@
 
 <body>
     <main>
-        <h1><a href="./"><img src="img/icon.svg" alt=""></a></h1>
+        <h1><a href="./"><img src="img/icon.svg" alt=""></a>GUIDED STRAW</h1>
         <ul>
             <li><a href="volume.html">Volume</a></li>
             <li><a href="candlestick.html">Candlestick</a></li>
             <li><a href="candlestick-multi-timeframe.html">Candlestick Multi timeframe</a></li>
+            <li><a href="random.html">Random</a></li>
         </ul>
     </main>
 </body>
