--- a/public/random.html
+++ b/public/random.html
@@ -9,6 +9,11 @@
     <link rel="shortcut icon" href="img/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
     <link rel="stylesheet" href="style.css">
+    <style>
+        #div1 {
+            word-wrap: break-word;
+        }
+    </style>
 </head>
 
 <body>
