--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <title>GUIDED STRAW</title>
     <link rel="shortcut icon" href="img/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
