--- a/public/random.html
+++ b/public/random.html
@@ -8,7 +8,7 @@
     <title>Random</title>
     <link rel="shortcut icon" href="img/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <style>
         #div1 {
             word-wrap: break-word;
