--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,9 @@
             <li><a href="candlestick.html">Candlestick</a></li>
             <li><a href="candlestick-multi-timeframe.html">Candlestick Multi timeframe</a></li>
             <li><a href="random.html">Random</a></li>
+            <li><a href="usdjpy1.html">USDJPY 1874-1939</a></li>
+            <li><a href="usdjpy2.html">USDJPY 1940-1975</a></li>
+            <li><a href="usdjpy3.html">USDJPY 1970-2022</a></li>
         </ul>
     </main>
 </body>
