--- a/public/usdjpy1.html
+++ b/public/usdjpy1.html
@@ -29,7 +29,7 @@
   <main></main>
   <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
   <script src="https://cdn.jsdelivr.net/npm/@observablehq/plot@0.6"></script>
-  <script src="/js/usdjpy.js"></script>
+  <script src="js/usdjpy.js"></script>
   <script>
     const url = "usdjpy-1874-1939.csv"
     const filter = d => true
