--- a/public/usdjpy3.html
+++ b/public/usdjpy3.html
@@ -30,7 +30,7 @@
   <main></main>
   <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
   <script src="https://cdn.jsdelivr.net/npm/@observablehq/plot@0.6"></script>
-  <script src="/js/usdjpy.js"></script>
+  <script src="js/usdjpy.js"></script>
   <script>
     const url = "usdjpy-1950-2022.csv"
     const filter = d => new Date(1970, 0, 1) <= d.date
