--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GUIDED STRAW</title>
-    <link rel="shortcut icon" href="img/icon.svg" type="image/svg+xml">
+    <link rel="icon" href="img/favicon.png" type="image/png">
     <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <main>
-        <h1><a href="./"><img src="img/icon.svg" alt=""></a>GUIDED STRAW</h1>
+        <h1><a href="./"><img src="img/icon.svg" alt="" class="icon"></a>GUIDED STRAW</h1>
         <ul>
             <li><a href="volume.html">Volume</a></li>
             <li><a href="candlestick.html">Candlestick</a></li>
@@ -23,6 +23,7 @@
             <li><a href="usdjpy1.html">USDJPY 1874-1939</a></li>
             <li><a href="usdjpy2.html">USDJPY 1940-1975</a></li>
             <li><a href="usdjpy3.html">USDJPY 1970-2022</a></li>
+            <li><a href="expectation.html">Expectation</a></li>
         </ul>
     </main>
 </body>
