--- a/public/random.html
+++ b/public/random.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random</title>
-    <link rel="shortcut icon" href="img/icon.svg" type="image/svg+xml">
+    <link rel="icon" href="img/favicon.png" type="image/png">
     <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
     <link rel="stylesheet" href="css/style.css">
     <style>
@@ -18,7 +18,7 @@
 
 <body>
     <main>
-        <h1><a href="./"><img src="img/icon.svg" alt=""></a>Random</h1>
+        <h1><a href="./"><img src="img/icon.svg" alt="" class="icon"></a>Random</h1>
         <div>
             <input type="range" id="range1" min="1" max="64" value="8">
             <span id="span1"></span>
