--- a/public/candlestick-multi-timeframe.html
+++ b/public/candlestick-multi-timeframe.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Candlestick Multi timeframe</title>
-    <link rel="shortcut icon" href="img/icon.svg" type="image/svg+xml">
+    <link rel="icon" href="img/favicon.png" type="image/png">
     <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
     <style>
         body {
