--- a/public/usdjpy3.html
+++ b/public/usdjpy3.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>USDJPY 1970-2022</title>
-  <link rel="shortcut icon" href="img/usdjpy-64.png" type="image/png">
-  <link rel="apple-touch-icon" href="img/usdjpy-180.png">
+  <link rel="icon" href="img/favicon.png" type="image/png">
+  <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
   <!--
     1931-1950
     1950-1980
